--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch==2.5.1+cu121
+torch==2.5.1+cu121 # better to install torch 2.5.1 from the official website
 transformers==4.48.2
 datasets==3.4.1
 accelerate==1.6.0
@@ -11,3 +11,4 @@ fire==0.7.0
 requests==2.32.3
 vllm==0.7.3
 deepspeed==0.15.4
+# It is essential to install DeepSpeed 0.15.4, Torch 2.5.1, and VLLM 0.7.3 in this specific combination; otherwise, bugs will occur.
